<resources>
    <!--Sign in Activity -->
    <string name="app_name">Catch UP</string>
    <string name="loading">Chargement</string>
    <string name="auth_failed">Echec de l\'authentification </string>
    <string name="emailpassword_status_fmt">Email User: %1$s(verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="FirebaseErrorToast">Echec de l\'envoi au serveur</string>
    <string name="signed_out">Déconnecté</string>
    <string name="sign_in_button">Se Connecter</string>
    <string name="signed_in_TV">Utilisateur enregistré avec succès, continuer</string>
    <string name="User_EMAIL">Email: %s</string>
    <string name="User_USERNAME">Nom d\'utilisateur: %s</string>
    <string name="create_account_button">Créer un compte</string>
    <string name="sign_out_button">Se déconnecter</string>
    <string name="verify_email_button">Vérifier l\'email</string>
    <string name="username_hint">Nom d\'utilisateur</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mot de passe</string>
    <!-- Home Activity -->
    <string name="details">details</string>
    <string name="groups">Boite à souvenirs</string>
    <string name="properties">Déconnexion</string>
    <string name="Home_CatchUpEvents">CatchUp: Evénements</string>
    <string name="isAdmin_true">Administrateur</string>
    <string name="isAdmin_false">Invité</string>
    <string name="signOut">Vous êtes maintenant déconnecté, à bientôt!</string>

    <!--EventSetup-->
    <string name="ajouterEvenement">Ajouter un évènement</string>
    <string name="locationauth">L\'app a besoin des donnees GPS pour pouvoir proposer des points de RDV a vos amis</string>
    <string name="SharedPrefUSERNAME_KEY">User_USERNAME</string>
    <string name="SharedPrefUserEMAIL_KEY">User_EMAIL</string>
    <string name="SharedPrefUSERID_KEY">User_ID</string>
    <string name="Tab1">Date</string>
    <string name="Tab2">Heure</string>
    <string name="eventSetup">Nom de l\'événement</string>
    <string name="eventSetup_PickPlace">Choisir un endroit</string>
    <string name="eventSetup_PickDate">Date et heure de rendez-vous</string>
    <string name="eventSetup_DateHint">Veuillez choisir une date de RDV</string>
    <string name="eventSetup_hint">Adresse: inconnue</string>
    <string name="eventSetup_nameHint">Nom de l\'endroit: inconnu</string>
    <string name="dateChooser_saveDate">Enregistrer</string>
    <string name="eventSetup_chooseEvent">Type d\'événement</string>
    <string name="eventSetup_eventHint">Aucun événement choisi</string>
    <string name="eventSetup_pickFriends">Inviter des amis</string>
    <string name="eventSetup_friendsHint">Aucun ami choisi</string>
    <string name="eventSetup_save">Sauvegarder</string>
    <string name="eventSetUp_cancel">Annuler</string>
    <string name="ToastNoFriends">Vous devez choisir au moins un ami pour créer un groupe!</string>
    <string name="FriendsPick_SavePickedFriends">Sauvegarder</string>
    <string name="FriendsPick_CancelPickedFriends">Annuler</string>
    <string name="eventChooser_resto">Restaurant</string>
    <string name="eventChooser_Expo">Exposition</string>
    <string name="eventChooser_apero">Apero</string>
    <string name="eventChooser_diner">Diner maison</string>
    <string name="eventChooser_sport">Sport</string>
    <string name="eventChooser_cinema">Cinema</string>
    <string name="eventChooser_concert">Concert</string>
    <string name="eventChooser_surprise">Surprise!</string>
    <string name="eventChooser_save">Sauvegarder</string>
    <string name="eventChooser_cancel">Annuler</string>
    <string name="eventListAdapter_type">Type d\'événement</string>
    <string name="eventSetupFalseSave">Oops! Avez-vous renseigné tous les champs?</string>
    <!-- Insights activity-->
    <string name="Insights_media">Medias</string>
    <string name="Insights_Message">Messages</string>
    <string name="Insights_Liens">Liens</string>
    <string name="Insights_EventName">EventName</string>
    <string name="InsightsProgressTitle">CatchUp: </string>
    <string name="InsightsProgressMessage">Envoi des photos sur le serveur</string>
    <string name="message_tab_et">Votre message...</string>
    <string name="messageVide">Vous alliez envoyer un message vide...</string>
    <!--ContentDescription-->
    <string name="Insights_background">background</string>
    <string name="Insights_GroupInfo">GroupInfo</string>
    <!--Notifications-->
    <string name="notification_default">Invitation!</string>
    <!--Welcome-->
    <string name="Welcome_welcome_splashscreen">welcomeIMG</string>
    <string name="title_activity_maps">Map</string>
    <!--EventInfo-->
    <string name="eventInfoDescription">eventDescription</string>
    <string name="eventInfoLocation">eventLocation</string>
    <string name="eventInfoDate">eventDate</string>
    <string name="eventInfoType">eventType</string>
    <string name="eventFriendInfo">Amis Invités</string>
    <!--Notification-->
    <string name="contentTitle">CatchUp: Vous avez été invités à un nouvel événement!</string>
    <string name="contentText">Clickez pour plus d\'infos</string>
    <string name="channel_name">CatchUp Notification Channel</string>
    <string name="channel_description">Invitations</string>
    <!--MemoryBox-->
    <string name="photoItem">photoItem</string>
    <!--Invitation-->
    <string name="Invitation">Vous avez été invité!</string>
    <string name="continuer">Continuez</string>
</resources>
