<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navHeader_main"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@color/myColorSecondary"
    android:gravity="bottom"
    android:orientation="vertical"
    >

    <QuickContactBadge
        android:id="@+id/quickContactBadge"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/navHeader_username_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/User_USERNAME" />

    <TextView
        android:id="@+id/navHeader_email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/User_EMAIL" />


</LinearLayout>
