<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/Insights_background"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/insights_appName_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Insignts_eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Insights_EventName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Insights_tabHost_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insights_appName_tv"
        app:layout_constraintVertical_bias="0.727" />

    <ImageButton
        android:id="@+id/Insights_dots_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/Insights_GroupInfo"
        android:onClick="ShowGroupInfo"
        android:src="@drawable/ic_more_vert_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TabHost
        android:id="@+id/Insights_tabHost_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:showDividers="middle" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="4dp">


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/Insights_tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/Insights_FAB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:layout_marginEnd="24dp"
                        android:onClick="pickPhoto"
                        android:src="@drawable/ic_add_a_photo_black_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <ScrollView
                        android:id="@+id/scrollView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/Insights_recycler_rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:listitem="@layout/media_recyclerview_item">

                        </android.support.v7.widget.RecyclerView>

                    </ScrollView>

                </android.support.constraint.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/Insights_tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>
                <!--
                <LinearLayout
                    android:id="@+id/Insights_tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>-->
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</android.support.constraint.ConstraintLayout>